# i-oic-better-together-data-ai-assistants-finance

./: README.md
backend/: README.md  api-code.py  api-data.sh  mongo-db.sh  pyproject.toml
crewai/: README.md
crewai/fin_project/: .env.example  pyproject.toml
crewai/fin_project/knowledge/: loan-products.docx  loan_approval_knowledge.txt
crewai/fin_project/src/: crew-api.py
crewai/fin_project/src/fin_project/: crew.py  main.py
crewai/fin_project/src/fin_project/config/: agents.yaml  tasks.yaml
crewai/fin_project/src/fin_project/tools/: custom_tool.py
frontend/: .env.example  README.md
frontend/server/: package-lock.json
frontend/server/routes/: record.js
frontend/src/components/: Login.jsx  Navbar.jsx  Record.jsx  RecordList.jsx
